--- a/src/assets/二维接雨水问题详细报告.md
+++ b/src/assets/二维接雨水问题详细报告.md
@@ -4,7 +4,7 @@
 **日期：2025年7月9日**
 
 ## 摘要
-
+# 欧拉恒等式
 二维接雨水问题是计算机科学中一个经典的算法问题，它要求在给定的二维高度图上计算能够接住的雨水体积。本报告深入分析了二维接雨水问题的数学原理、算法实现、复杂度分析以及实际应用，并详细比较了多种解法的优缺点。通过对该问题的全面研究，我们发现二维接雨水问题不仅具有重要的理论价值，在地理信息系统、水利工程和计算机图形学等领域也有广泛的应用前景。
 
 ## 1. 引言
